# persistent_array

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  search-index.js
benches/: bench.rs
implementors/core/fmt/: trait.Debug.js
implementors/core/ops/: trait.Deref.js  trait.DerefMut.js
persistent_array/: enum.Error.html  index.html  sidebar-items.js  struct.PersistentArray.html
src/: lib.rs  persistent_array.rs
src/persistent_array/src/: lib.rs.html
tests/: test.rs
