[package]
name = "persistent_array"
version = "0.3.2"
authors = ["Jonathan Nilsson <l.a.jonathan.nilsson@gmail.com>"]
license = "MIT"
repository = "https://github.com/JoNil/persistent_array"
documentation = "https://jonil.github.io/persistent_array/persistent_array/index.html"
description = "Persistent array is a library for working with memory mapped arrays"
readme = "README.md"

exclude = [
  ".gitignore",
  ".travis.yml",
]

[features]
use_clippy = ["clippy"]

[dependencies]
layout_id = "*"
memmap = "*"
num = "*"

[dependencies.clippy]
version = "*"
optional = true